--- a/build.gradle
+++ b/build.gradle
@@ -22,10 +22,22 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+
     // https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
     implementation 'org.apache.poi:poi-ooxml:5.2.0'
     // https://mvnrepository.com/artifact/dom4j/dom4j
     implementation 'dom4j:dom4j:1.6.1'
+
+    // https://mvnrepository.com/artifact/log4j/log4j
+    implementation 'log4j:log4j:1.2.17'
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
+    implementation 'org.slf4j:slf4j-api:2.0.0-alpha6'
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12
+    testImplementation 'org.slf4j:slf4j-log4j12:2.0.0-alpha6'
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
+    testImplementation 'org.slf4j:slf4j-simple:2.0.0-alpha6'
+
+
 }
 
 test {
