--- a/build.gradle
+++ b/build.gradle
@@ -23,11 +23,13 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 
+    // Excel处理
     // https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
     implementation 'org.apache.poi:poi-ooxml:5.2.0'
     // https://mvnrepository.com/artifact/dom4j/dom4j
     implementation 'dom4j:dom4j:1.6.1'
 
+    // log4j
     // https://mvnrepository.com/artifact/log4j/log4j
     implementation 'log4j:log4j:1.2.17'
     // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
