--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,11 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+//    // https://mvnrepository.com/artifact/io.netty/netty-all
+//    implementation 'io.netty:netty-all:4.1.24.Final'
     // https://mvnrepository.com/artifact/io.netty/netty-all
-    implementation 'io.netty:netty-all:4.1.24.Final'
+    implementation group: 'io.netty', name: 'netty-all', version: '4.1.42.Final'
+
     // https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java
     implementation 'com.google.protobuf:protobuf-java:3.19.2'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
